--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kenolo",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Basic business rules engine",
   "main": "index.js",
   "scripts": {
@@ -11,10 +11,12 @@
   "devDependencies": {
     "chai": "^4.1.2",
     "eslint": "^4.13.1",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-import": "^2.8.0",
     "mocha": "^4.0.1"
   },
   "dependencies": {
-    "lodash": "^4.17.4",
+    "lodash.get": "^4.4.2",
     "talisman": "^0.20.0"
   }
 }
