--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kenolo",
-  "version": "1.0.7",
+  "version": "1.0.8",
   "description": "A lightweight JSON-based business rules engine",
   "main": "index.js",
   "scripts": {
@@ -16,7 +16,7 @@
     "mocha": "^4.0.1"
   },
   "dependencies": {
-    "lodash.get": "^4.4.2",
+    "getv": "^1.0.0",
     "talisman": "^0.20.0"
   }
 }
