--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "mocha ./tests"
   },
   "author": "Nir Elbaz <nire0510@gmail.com> (http://nirelbaz.com)",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
     "chai": "^4.1.2",
     "eslint": "^4.13.1",
