--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
   "name": "kenolo",
-  "version": "2.2.2",
+  "version": "2.3.0",
   "description": "A lightweight JSON-based business rules engine",
   "main": "index.js",
   "scripts": {
     "test": "mocha ./tests"
   },
-  "author": "Nir Elbaz <nire0510@gmail.com> (http://nirelbaz.com)",
+  "author": "Nir Elbaz <nire0510@gmail.com> (https://nirelbaz.com)",
   "license": "MIT",
   "devDependencies": {
     "chai": "^4.3.7",
     "eslint": "^8.30.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
-    "mocha": "^10.2.0"
+    "mocha": "^11.6.0"
   },
   "dependencies": {
-    "getv": "^1.0.6",
+    "getv": "^1.1.1",
     "talisman": "^1.1.4"
   }
 }
